--- a/mahafidz/portofolio.html
+++ b/mahafidz/portofolio.html
@@ -262,7 +262,7 @@
                 </a>
                 <div class="portfolio-photo_photo-title">
                   <h5 class="fs-lg-sm-16">SpeeQual Sdn.Bhd Malaysia</h5>
-                  <h6 class="mb-0 fw-400 fs-md-14 fs-sm-sm-12">speequal.com/</h6>
+                  <h6 class="mb-0 fw-400 fs-md-14 fs-sm-sm-12">speequal.com</h6>
                   <p class="mb-0 fw-400 fs-md-14 fs-sm-sm-12">Use service: Web Design & Development.</p>
                 </div>
               </figure>
