--- a/mahafidz/inspirasi.html
+++ b/mahafidz/inspirasi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/style/style.css" />
     <link rel="shortcut icon" href="assets/img/flavicon.ico" type="image/x-icon" />
@@ -52,7 +53,7 @@
       </section>
     </header>
 
-    <section class="container mt-5">
+    <section class="container mt-5 mb-3">
       <div data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
         <h1 class="text-center mb-4">Inspirasi Terbaru</h1>
       </div>
@@ -79,6 +80,30 @@
         </div>
       </div>
     </section>
+
+    <footer class="bg-dark text-white text-center pt-3 pb-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 text-md-start text-center">
+            <h4>Office Address:</h4>
+            <p>Jl. Damai No.7C, Palagan, Sleman, Yogyakarta.</p>
+          </div>
+          <div class="col-md-6 text-md-end text-center">
+            <h6>Temukan kami di media sosial:</h6>
+            <a href="https://www.facebook.com/al.hafidz.79" target="_blank" class="text-white mx-2"><i class="bi bi-facebook"></i></a>
+            <a href="https://twitter.com/IDMETAFORA" class="text-white mx-2"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.instagram.com/mahafidzcom/" target="_blank" class="text-white mx-2"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/m-abdurrohman-alhafidz-1b96ab63/" target="_blank" class="text-white mx-2"><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="pt-3">
+          <p>
+            &copy; Copyright 2023 <a href="#"><strong>MAHAFIDZ</strong></a> All Rights Reserved
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
