--- a/mahafidz/profil.html
+++ b/mahafidz/profil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="assets/style/style.css" />
     <link rel="shortcut icon" href="assets/img/flavicon.ico" type="image/x-icon" />
     <title>Profil MAHAFIDZ</title>
@@ -65,6 +66,20 @@
           <div class="col-md-8">
             <div class="profil-item">
               <h3>Profil M Abdurrohman Alhafidz</h3>
+
+              <div class="container mt-3 mb-2">
+                <div class="row">
+                  <div class="col-md-6">
+                    <img src="/assets/img/admin.png" alt="Foto Admin" width="40" class="rounded-circle img-thumbnail zoom animate__animated animate__backInDown" href="#" />
+                    <h6 style="display: inline; margin-left: 5px; font-size: small" class="p-color">ADMIN</h6>
+                    <p style="display: inline; margin-left: 10px; font-size: small" class="p-color">6 November 2023</p>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="sharethis-inline-share-buttons ms-5"></div>
+                  </div>
+                </div>
+              </div>
+
               <img src="assets/img/profil.png" alt="MAHAFIDZ" class="img-fluid mt-2 mb-2" />
               <p>
                 M Abdurrohman Alhafidz adalah seorang pengusaha muda yang sukses di Indonesia. Ia adalah pendiri dari perusahaan jasa pembuatan software ERP (Enterprise Resource Planning) bernama IDMETAFORA (PT Metafora Indonesia
@@ -132,6 +147,30 @@
         </div>
       </div>
     </section>
+
+    <footer class="bg-dark text-white text-center pt-3 pb-2 mt-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 text-md-start text-center">
+            <h4>Office Address:</h4>
+            <p>Jl. Damai No.7C, Palagan, Sleman, Yogyakarta.</p>
+          </div>
+          <div class="col-md-6 text-md-end text-center">
+            <h6>Temukan kami di media sosial:</h6>
+            <a href="https://www.facebook.com/al.hafidz.79" target="_blank" class="text-white mx-2"><i class="bi bi-facebook"></i></a>
+            <a href="https://twitter.com/IDMETAFORA" class="text-white mx-2"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.instagram.com/mahafidzcom/" target="_blank" class="text-white mx-2"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/m-abdurrohman-alhafidz-1b96ab63/" target="_blank" class="text-white mx-2"><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="pt-3">
+          <p>
+            &copy; Copyright 2023 <a href="#"><strong>MAHAFIDZ</strong></a> All Rights Reserved
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=654a16b3a9ff0f0012c0d91c&product=inline-share-buttons&source=platform" async="async"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
