--- a/mahafidz/news.html
+++ b/mahafidz/news.html
@@ -57,26 +57,49 @@
       <div data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
         <h1 class="text-center mb-4">Berita Terbaru</h1>
       </div>
-      <div class="row">
-        <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
-          <div class="card mb-4">
-            <img src="assets/img/news1.png" alt="Berita 1" class="card-img-top" />
-            <div class="card-body">
-              <h5 class="card-title">Pengusaha Muda Sukses</h5>
-              <p class="card-text">Bagaimana M Abdurrohman Alhafidz mencapai kesuksesan sejak usia muda? Temukan rahasianya dalam artikel ini.</p>
-              <a href="news1.html" class="btn btn-primary">Baca Selengkapnya</a>
-            </div>
+      <!-- <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success-emphasis">News</strong>
+            <h3 class="mb-0">Pengusaha Muda Sukses</h3>
+            <div class="mb-1 text-body-secondary">Nov 8</div>
+            <p class="mb-auto">Bagaimana M Abdurrohman Alhafidz mencapai kesuksesan sejak usia muda? Temukan rahasianya dalam artikel ini.</p>
+            <a href="news1.html" style="color: #1d65ce; text-decoration: underline" class="icon-link gap-1 icon-link-hover stretched-link">
+              Continue reading
+              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+            </a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="assets/img/news12.png" height="100%" alt="M Abdurrohman Alhafidz mencapai kesuksesan sejak usia muda" />
           </div>
         </div>
-        <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
-          <div class="card mb-4">
-            <img src="assets/img/news2.png" alt="Berita 2" class="card-img-top" />
-            <div class="card-body">
-              <h5 class="card-title">Kisah Perintis IDMETAFORA</h5>
-              <p class="card-text">Bagaimana M Abdurrohman Alhafidz merintis IDMETAFORA? Temukan rahasianya dalam artikel ini.</p>
-              <a href="news2.html" class="btn btn-primary">Baca Selengkapnya</a>
+      </div> -->
+      <div class="row">
+        <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
+          <a href="/news1.html">
+            <div class="card mb-4">
+              <img src="assets/img/news1.png" alt="Berita 1" class="card-img-top" />
+              <div class="card-body">
+                <p class="text-muted mb-2">7 November 2023</p>
+                <h5 class="card-title">Pengusaha Muda Sukses</h5>
+                <p class="card-text">Bagaimana M Abdurrohman Alhafidz mencapai kesuksesan sejak usia muda? Temukan rahasianya dalam artikel ini.</p>
+                <!-- <a href="news1.html" class="btn btn-primary">Baca Selengkapnya</a> -->
+              </div>
             </div>
-          </div>
+          </a>
+        </div>
+        <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
+          <a href="/news2.html">
+            <div class="card mb-4">
+              <img src="assets/img/news2.png" alt="Berita 2" class="card-img-top" />
+              <div class="card-body">
+                <p class="text-muted mb-2">8 November 2023</p>
+                <h5 class="card-title">Kisah Perintis IDMETAFORA</h5>
+                <p class="card-text">Bagaimana M Abdurrohman Alhafidz merintis IDMETAFORA? Temukan rahasianya dalam artikel ini.</p>
+                <!-- <a href="news2.html" class="btn btn-primary">Baca Selengkapnya</a> -->
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </section>
