--- a/mahafidz/index.html
+++ b/mahafidz/index.html
@@ -14,14 +14,23 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="author" content="Irfan Syarifudin" />
 
+    <!-- Bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="assets/style/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+
+    <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <!-- css -->
+    <link rel="stylesheet" href="assets/style/style.css" />
+
+    <!-- Icon -->
     <link rel="shortcut icon" href="assets/img/flavicon.ico" type="image/x-icon" />
+
     <title>MAHAFIDZ</title>
   </head>
   <body>
+    <!-- Header Navbar -->
     <header>
       <section id="navbar">
         <div class="white-logo text-center bg-dark pt-4 pb-2">
@@ -59,14 +68,6 @@
                 <li class="nav-item">
                   <a class="nav-link text-light" href="/client.html">Client</a>
                 </li>
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Dropdown link </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
-                </li> -->
               </ul>
             </div>
           </div>
@@ -74,6 +75,7 @@
       </section>
     </header>
 
+    <!-- Carousel Slide -->
     <section class="profil">
       <div class="container text-justify pt-5">
         <div id="profilCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -152,38 +154,6 @@
                 </div>
               </div>
             </div>
-            <!-- Contoh slide ketiga -->
-            <!-- <div class="carousel-item">
-              <div class="row align-items-center">
-                <div class="col-md-6 col-12">
-                  <div class="mb-2">
-                    <a href="inspirasi.html"><small class="text-muted">INSPIRATIF</small></a>
-                  </div>
-                  <div class="title mb-3">
-                    <a href="inspirasi2.html"><h2>Pengusaha Muda Inspiratif</h2></a>
-                  </div>
-                  <a href="inspirasi2.html">
-                    <p>
-                      Ialah M Abdurrohman Alhafidz, salah satu pengusaha muda yang sukses di Indonesia. Ia adalah pendiri dari perusahaan jasa pembuatan software ERP (Enterprise Resource Planning) bernama IDMETAFORA (PT Metafora Indonesia
-                      Teknologi). Pengusaha muda yang memulai bisnis di Yogyakarta ini mulai belajar bahasa pemrograman pada tahun 2009 di usia 14 tahun.
-                    </p>
-                  </a>
-                </div>
-                <div class="col-md-6 col-12 profil-border-video video-size">
-                  <iframe
-                    width="100%"
-                    height="100%"
-                    src="https://www.youtube.com/embed/UOrQV7r_fX8"
-                    title="IDMETAFORA - Cerita dibalik 5 Tahun Perjalanan PT Metafora Indonesia Teknologi - Part 1"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen
-                    class=""
-                  ></iframe>
-                </div>
-              </div>
-            </div> -->
-            <!-- Contoh slide ketiga -->
           </div>
           <!-- Controls -->
           <a class="carousel-control-prev" href="#profilCarousel" role="button" data-bs-slide="prev">
@@ -198,6 +168,7 @@
       </div>
     </section>
 
+    <!-- Section News -->
     <section id="news">
       <div class="container pt-5">
         <div data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
@@ -224,6 +195,7 @@
       </div>
     </section>
 
+    <!-- Section Inspirasi -->
     <section id="inspirasi">
       <div class="container pt-3">
         <div data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
@@ -250,6 +222,7 @@
       </div>
     </section>
 
+    <!-- Section Client -->
     <section id="client">
       <div class="container pt-2 pb-5" data-aos="fade-up" data-aos-duration="3000" data-aos-delay="300" data-aos-offset="200">
         <div class="container">
@@ -308,6 +281,7 @@
       </div>
     </section>
 
+    <!-- Footer -->
     <footer class="bg-dark text-white text-center pt-3 pb-2">
       <div class="container">
         <div class="row">
@@ -331,8 +305,11 @@
       </div>
     </footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
