--- a/mahafidz/inspirasi.html
+++ b/mahafidz/inspirasi.html
@@ -59,24 +59,30 @@
       </div>
       <div class="row">
         <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
-          <div class="card mb-4">
-            <img src="assets/img/inspirasi2.png" alt="Berita 1" class="card-img-top" />
-            <div class="card-body" d>
-              <h5 class="card-title">Pengusaha Muda Sukses</h5>
-              <p class="card-text">Bagaimana M Abdurrohman Alhafidz mencapai kesuksesan sejak usia muda? Temukan rahasianya dalam artikel ini.</p>
-              <a href="/inspirasi1.html" class="btn btn-primary">Baca Selengkapnya</a>
+          <a href="/inspirasi1.html">
+            <div class="card mb-4">
+              <img src="assets/img/inspirasi2.png" alt="Berita 1" class="card-img-top" />
+              <div class="card-body" d>
+                <p class="text-muted mb-2">7 November 2023</p>
+                <h5 class="card-title">Pengusaha Muda Sukses</h5>
+                <p class="card-text">Bagaimana M Abdurrohman Alhafidz mencapai kesuksesan sejak usia muda? Temukan rahasianya dalam artikel ini.</p>
+                <!-- <a href="/inspirasi1.html" class="btn btn-primary">Baca Selengkapnya</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
-          <div class="card mb-4">
-            <img src="assets/img/inspirasi.png" alt="Berita 2" class="card-img-top" />
-            <div class="card-body">
-              <h5 class="card-title">Rahasia Kesuksesan</h5>
-              <p class="card-text">Bagaimana M Abdurrohman Alhafidz mencapai kesuksesan sejak usia muda? Temukan rahasianya dalam artikel ini..</p>
-              <a href="/inspirasi2.html" class="btn btn-primary">Baca Selengkapnya</a>
+          <a href="/inspirasi2.html">
+            <div class="card mb-4">
+              <img src="assets/img/inspirasi.png" alt="Berita 2" class="card-img-top" />
+              <div class="card-body">
+                <p class="text-muted mb-2">8 November 2023</p>
+                <h5 class="card-title">Rahasia Kesuksesan</h5>
+                <p class="card-text">Bagaimana M Abdurrohman Alhafidz mencapai kesuksesan sejak usia muda? Temukan rahasianya dalam artikel ini..</p>
+                <!-- <a href="/inspirasi2.html" class="btn btn-primary">Baca Selengkapnya</a> -->
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
