--- a/mahafidz/news1.html
+++ b/mahafidz/news1.html
@@ -127,6 +127,15 @@
                 Sebagai perusahaan yang bergerak dalam bidang solusi jasa ERP, IDMETAFORA juga pernah melayani beberapa Badan Usaha Milik Negara (BUMN) & Badan Usaha Milik Daerah (BUMD) seperti PT Pertamina (Persero), PT Chandra Asri
                 Petrochemical Tbk, PT Madusari Murni Indah Tbk hingga perusahaan multinasional seperti Mubadala Petroleum. Mereka mempercayai IDMETAFORA dalam pengembangan website & sistem informasi manajemen perusahaannya.
               </p>
+              <p>
+                Dengan banyaknya pengalaman yang telah dijalani IDMETAFORA dalam mengembangkan bisnis jasa pembuatan software ERP.  M Abdurrohman Alhafidz beserta timnya telah menjadi inspirasi bagi banyak perusahaan di Indonesia maupun di luar negeri. Hal ini dikarenakan IDMETAFORA telah berhasil membangun reputasi sebagai perusahaan yang kredibel dan terpercaya dengan menawarkan solusi layanan ERP yang inovatif dan berkualitas. Mereka memahami bahwa sangat penting untuk selalu mengupayakan kepuasan pelanggan dan terus berinovasi serta berkembang dalam bisnis agar dapat bertahan di pasar yang kian kompetitif. Oleh karena itu, IDMETAFORA terus berupaya memberikan solusi dan layanan terbaik kepada pelanggan, serta mengembangkan produk baru dan meningkatkan layanan.
+              </p>
+              <p>
+                IDMETAFORA juga memantau perkembangan teknologi dan tren industri yang selalu berubah agar dapat mengikuti perkembangan dan mampu menawarkan solusi layanan ERP yang memuaskan kebutuhan pelanggan. IDMETAFORA juga mengikuti standar dan prosedur yang ketat dalam menjaga kualitas produk dan layanannya serta melatih dan mengembangkan karyawannya untuk meningkatkan kualitas layanan. 
+              </p>
+              <p>
+                M Abdurrohman Alhafidz merupakan seorang pengusaha yang bisa menjadi teladan bahwa usia bukanlah batas untuk memulai bisnis dan jangan takut untuk bermimpi sebesar dan setinggi mungkin. 
+              </p>
             </div>
             <strong>Jika anda merasa artikel ini bermanfaat, bagikan ke pengikut anda melalui tombol dibawah ini: </strong>
             <div class="sharethis-inline-share-buttons mt-3 mb-5"></div>
