--- a/mahafidz/index.html
+++ b/mahafidz/index.html
@@ -104,7 +104,7 @@
                   </a>
                 </div>
                 <div class="col-md-6 col-12 profil-border">
-                  <a href="profil.html"><img src="assets/img/profil.png" alt="MAHAFIDZ" class="img-fluid" /></a>
+                  <a href="profil.html"><img src="assets/img/profil.png" alt="Profil MAHAFIDZ" class="img-fluid" /></a>
                 </div>
               </div>
             </div>
@@ -127,7 +127,7 @@
                   </a>
                 </div>
                 <div class="col-md-6 col-12 profil-border">
-                  <a href="news1.html"><img src="assets/img/news1.png" alt="MAHAFIDZ" class="img-fluid" /></a>
+                  <a href="news1.html"><img src="assets/img/news1.png" alt="MAHAFIDZ Bangun Bisnis Sejak Umur 14 Tahun" class="img-fluid" /></a>
                 </div>
               </div>
             </div>
@@ -150,16 +150,12 @@
                   </a>
                 </div>
                 <div class="col-md-6 col-12 profil-border">
-                  <a href="inspirasi2.html"><img src="assets/img/inspirasi.png" alt="MAHAFIDZ" class="img-fluid" /></a>
+                  <a href="inspirasi2.html"><img src="assets/img/inspirasi.png" alt="MAHAFIDZ Pengusaha Muda Inspiratif" class="img-fluid" /></a>
                 </div>
               </div>
             </div>
           </div>
           <!-- Controls -->
-          <a class="carousel-control-prev" href="#profilCarousel" role="button" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </a>
           <a class="carousel-control-next control" href="#profilCarousel" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon" ariahidden="true"></span>
             <span class="visually-hidden">Next</span>
@@ -177,7 +173,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="news-item profil-border" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
-              <a href="/news1.html"><img src="assets/img/news1.png" alt="News 1" class="img-fluid" /></a>
+              <a href="/news1.html"><img src="assets/img/news1.png" alt="Modal Uang Saku Bangun Bisnis" class="img-fluid" /></a>
             </div>
           </div>
           <div class="col-md-6">
@@ -215,7 +211,7 @@
           </div>
           <div class="col-md-6">
             <div class="inspirasi-item profil-border" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
-              <a href="inspirasi2.html"> <img src="assets/img/inspirasi.png" alt="inspirasi" class="img-fluid" /></a>
+              <a href="inspirasi2.html"> <img src="assets/img/inspirasi.png" alt="Pengusaha Muda Inspiratif" class="img-fluid" /></a>
             </div>
           </div>
         </div>
@@ -282,22 +278,39 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center pt-3 pb-2">
+    <footer class="bg-dark text-white text-justify pt-4 pb-2 background-transparan">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-md-start text-center">
-            <h4>Office Address:</h4>
-            <p>Jl. Damai No.7C, Palagan, Sleman, Yogyakarta.</p>
+          <div class="col-md-3 text-md-start text-justify">
+            <h5>About Us.</h5>
+            <p>MAHAFIDZ is IT Solution Company, our main business is in web design & development. We also support our client in digital marketing. MAHAFIDZ Indonesia Teknologi (mahafidz) &copy; 2014-2023</p>
           </div>
-          <div class="col-md-6 text-md-end text-center">
+          <div class="col-md-3 text-md-start text-justify">
+            <h5>Our Company</h5>
+            <div class="remove-bullet pb-3">
+              <ul>
+                <a href="#"><li>Insight About Us</li></a>
+                <a href="https://bit.ly/46gaPmU"><li>Telephone: +62 896 6423 0232</li></a>
+                <a href="mailto:info@mahafidz.com"><li>Email: info@mahafidz.com</li></a>
+              </ul>
+            </div>
+            <h5>Office Address</h5>
+            <a href="https://bit.ly/476zOds"> <p>Jl. Damai No.7C, Palagan, Sleman, Yogyakarta.</p></a>
+          </div>
+          <div class="col-md-3 text-md-start text-justify pb-2">
+            <h5>Group Company</h5>
+            <a href="#"> <img style="width: 160px" src="assets/img/logo-metafora-corp.png" class="pb-2" /></a>
+            <a href="#"> <img style="width: 180px" src="assets/img/metafora-land-long-logo-with-description-png.png" /></a>
+          </div>
+          <div class="col-md-3 text-md-start text-md-start text-center">
             <h6>Temukan kami di media sosial:</h6>
             <a href="https://www.facebook.com/al.hafidz.79" target="_blank" class="text-white mx-2"><i class="bi bi-facebook"></i></a>
-            <a href="https://twitter.com/IDMETAFORA" class="text-white mx-2"><i class="bi bi-twitter"></i></a>
+            <a href="https://twitter.com/IDMETAFORA" class="text-white mx-2"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.instagram.com/mahafidzcom/" target="_blank" class="text-white mx-2"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/m-abdurrohman-alhafidz-1b96ab63/" target="_blank" class="text-white mx-2"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
-        <div class="pt-3">
+        <div class="pt-3 text-center">
           <p>
             &copy; Copyright 2023 <a href="#"><strong>MAHAFIDZ</strong></a> All Rights Reserved
           </p>
