--- a/mahafidz/portofolio.html
+++ b/mahafidz/portofolio.html
@@ -153,7 +153,7 @@
           <div class="carousel-item">
             <div class="portfolio-photo_one">
               <figure class="portfolio-photo_photo" type=" button" data-toggle="modal" data-target="#modalPhoto" onclick="hiddenOverflowY(); appendPhotoTitle(this);">
-                <img src="assets/img-portofolio/portofolio-molindo.png" alt="Website Unison Healthcare - registration.unison-healthcare.com" class="img-fluid" />
+                <img src="assets/img-portofolio/portofolio-molindo.png" alt="Website MOLINDO Group (PT Madusari Murni Indah Tbk) - molindo.co.id" class="img-fluid" />
                 <a href="https://molindo.co.id/" target="_blank">
                   <div class="icon-plus">
                     <i class="fas fa-plus fa-lg"></i>
@@ -170,7 +170,7 @@
           <div class="carousel-item">
             <div class="portfolio-photo_one">
               <figure class="portfolio-photo_photo" type=" button" data-toggle="modal" data-target="#modalPhoto" onclick="hiddenOverflowY(); appendPhotoTitle(this);">
-                <img src="assets/img-portofolio/portofolio-piranha-smart-center.png" alt="Website Unison Healthcare - registration.unison-healthcare.com" class="img-fluid" />
+                <img src="assets/img-portofolio/portofolio-piranha-smart-center.png" alt="Website PT Piranha Multi Talenta - piranhasmartcenter.com" class="img-fluid" />
                 <a href="https://piranhasmartcenter.com/" target="_blank">
                   <div class="icon-plus">
                     <i class="fas fa-plus fa-lg"></i>
@@ -187,7 +187,7 @@
           <div class="carousel-item">
             <div class="portfolio-photo_one">
               <figure class="portfolio-photo_photo" type=" button" data-toggle="modal" data-target="#modalPhoto" onclick="hiddenOverflowY(); appendPhotoTitle(this);">
-                <img src="assets/img-portofolio/inaero.id-aeropro-pesawat-tanpa-awak-yogyakarta.png" alt="Website Unison Healthcare - registration.unison-healthcare.com" class="img-fluid" />
+                <img src="assets/img-portofolio/inaero.id-aeropro-pesawat-tanpa-awak-yogyakarta.png" alt="Website PT Elevasi Teknologi Aeronautika Nusantara - Inaero.id" class="img-fluid" />
                 <a href="https://Inaero.id/" target="_blank">
                   <div class="icon-plus">
                     <i class="fas fa-plus fa-lg"></i>
@@ -204,7 +204,7 @@
           <div class="carousel-item">
             <div class="portfolio-photo_one">
               <figure class="portfolio-photo_photo" type=" button" data-toggle="modal" data-target="#modalPhoto" onclick="hiddenOverflowY(); appendPhotoTitle(this);">
-                <img src="assets/img-portofolio/portfolio-pt-albasia-batang-sejahtera.png" alt="Website Unison Healthcare - registration.unison-healthcare.com" class="img-fluid" />
+                <img src="assets/img-portofolio/portfolio-pt-albasia-batang-sejahtera.png" alt="Website PT Albasia Batang Sejahtera - albasiabatang.com" class="img-fluid" />
                 <a href="https://albasiabatang.com/" target="_blank">
                   <div class="icon-plus">
                     <i class="fas fa-plus fa-lg"></i>
@@ -221,7 +221,7 @@
           <div class="carousel-item">
             <div class="portfolio-photo_one">
               <figure class="portfolio-photo_photo" type=" button" data-toggle="modal" data-target="#modalPhoto" onclick="hiddenOverflowY(); appendPhotoTitle(this);">
-                <img src="assets/img-portofolio/tentang-arsifab-platform-pesan-rumah-online-indonesia-raya.png" alt="Website Unison Healthcare - registration.unison-healthcare.com" class="img-fluid" />
+                <img src="assets/img-portofolio/tentang-arsifab-platform-pesan-rumah-online-indonesia-raya.png" alt="Website PT KIYA SINERGI ASIA - Arsifab.com" class="img-fluid" />
                 <a href="https://idmetafora.com/works/arsifab/home.aspx" target="_blank">
                   <div class="icon-plus">
                     <i class="fas fa-plus fa-lg"></i>
@@ -238,7 +238,7 @@
           <div class="carousel-item">
             <div class="portfolio-photo_one">
               <figure class="portfolio-photo_photo" type=" button" data-toggle="modal" data-target="#modalPhoto" onclick="hiddenOverflowY(); appendPhotoTitle(this);">
-                <img src="assets/img-portofolio/star-indonesia.id.png" alt="Website Unison Healthcare - registration.unison-healthcare.com" class="img-fluid" />
+                <img src="assets/img-portofolio/star-indonesia.id.png" alt="Website PT Star Software Indonesia - star-indonesia.id" class="img-fluid" />
                 <a href="https://star-indonesia.id/" target="_blank">
                   <div class="icon-plus">
                     <i class="fas fa-plus fa-lg"></i>
@@ -255,7 +255,7 @@
           <div class="carousel-item">
             <div class="portfolio-photo_one">
               <figure class="portfolio-photo_photo" type=" button" data-toggle="modal" data-target="#modalPhoto" onclick="hiddenOverflowY(); appendPhotoTitle(this);">
-                <img src="assets/img-portofolio/website-speequal-com-malaysia-web-developed-by-idmetafora-2.png" alt="Website Unison Healthcare - registration.unison-healthcare.com" class="img-fluid" />
+                <img src="assets/img-portofolio/website-speequal-com-malaysia-web-developed-by-idmetafora-2.png" alt="Website SpeeQual Sdn.Bhd Malaysia - speequal.com" class="img-fluid" />
                 <a href="https://speequal.com//" target="_blank">
                   <div class="icon-plus">
                     <i class="fas fa-plus fa-lg"></i>
@@ -282,22 +282,40 @@
       </div>
     </section>
 
-    <footer class="bg-dark text-white text-center pt-3 pb-2">
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-justify pt-4 pb-2 background-transparan">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-md-start text-center">
-            <h4>Office Address:</h4>
-            <p>Jl. Damai No.7C, Palagan, Sleman, Yogyakarta.</p>
+          <div class="col-md-3 text-md-start text-justify">
+            <h5>About Us.</h5>
+            <p>MAHAFIDZ is IT Solution Company, our main business is in web design & development. We also support our client in digital marketing. MAHAFIDZ Indonesia Teknologi (mahafidz) &copy; 2014-2023</p>
           </div>
-          <div class="col-md-6 text-md-end text-center">
+          <div class="col-md-3 text-md-start text-justify">
+            <h5>Our Company</h5>
+            <div class="remove-bullet pb-3">
+              <ul>
+                <a href="#"><li>Insight About Us</li></a>
+                <a href="https://bit.ly/46gaPmU"><li>Telephone: +62 896 6423 0232</li></a>
+                <a href="mailto:info@mahafidz.com"><li>Email: info@mahafidz.com</li></a>
+              </ul>
+            </div>
+            <h5>Office Address</h5>
+            <a href="https://bit.ly/476zOds"> <p>Jl. Damai No.7C, Palagan, Sleman, Yogyakarta.</p></a>
+          </div>
+          <div class="col-md-3 text-md-start text-justify pb-2">
+            <h5>Group Company</h5>
+            <a href="#"> <img style="width: 160px" src="assets/img/logo-metafora-corp.png" class="pb-2" /></a>
+            <a href="#"> <img style="width: 180px" src="assets/img/metafora-land-long-logo-with-description-png.png" /></a>
+          </div>
+          <div class="col-md-3 text-md-start text-md-start text-center">
             <h6>Temukan kami di media sosial:</h6>
             <a href="https://www.facebook.com/al.hafidz.79" target="_blank" class="text-white mx-2"><i class="bi bi-facebook"></i></a>
-            <a href="https://twitter.com/IDMETAFORA" class="text-white mx-2"><i class="bi bi-twitter"></i></a>
+            <a href="https://twitter.com/IDMETAFORA" class="text-white mx-2"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.instagram.com/mahafidzcom/" target="_blank" class="text-white mx-2"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/m-abdurrohman-alhafidz-1b96ab63/" target="_blank" class="text-white mx-2"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
-        <div class="pt-3">
+        <div class="pt-3 text-center">
           <p>
             &copy; Copyright 2023 <a href="#"><strong>MAHAFIDZ</strong></a> All Rights Reserved
           </p>
