Update index.html META TAG SEO

--- a/mahafidz/index.html
+++ b/mahafidz/index.html
@@ -8,7 +8,7 @@
     <!-- SEO -->
     <meta name="google-site-verification" content="29CnmVlPwO8uPHulbQR6KYzol5wqfKfgDzUtH2isZPk" />
     <meta name="title" content="Mahafidz" />
-    <meta name="description" content="MAHAFIDZ | M Abdurrohman Alhafidz adalah seorang pengusaha muda yang sukses. Ia adalah pendiri dari perusahaan jasa pembuatan software ERP bernama IDMETAFORA." />
+    <meta name="description" content="M Abdurrohman Alhafidz adalah seorang pengusaha muda yang sukses. Ia adalah pendiri dari perusahaan jasa pembuatan software ERP bernama IDMETAFORA." />
     <meta name="keywords" content="MAHAFIDZ,M Abdurrohman Alhafidz,IDMETAFORA" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
