Add Title Client
Add Title Client

--- a/mahafidz/client.html
+++ b/mahafidz/client.html
@@ -73,48 +73,48 @@
         <div data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/logo-kabupaten-pemalang.png" alt="client kabupaten pemalang" class="img-fluid" />
+              <img src="assets/img-client/logo-kabupaten-pemalang.png" alt="client kabupaten pemalang" class="img-fluid" title="Kabupaten Pemalang" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/star-group.png" alt="client star group" class="img-fluid" />
+              <img src="assets/img-client/star-group.png" alt="client star group" class="img-fluid" title="Star Group" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/kementrian-perhubungan.png" alt="client kementrian perhubungan" class="img-fluid" />
+              <img src="assets/img-client/kementrian-perhubungan.png" alt="client kementrian perhubungan" title="Kementrian Perhubungan" class="img-fluid" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/bu-tjitro.png" alt="client bu tjitro" class="img-fluid" />
+              <img src="assets/img-client/bu-tjitro.png" alt="client bu tjitro" class="img-fluid" title="Gudeg Bu Tjitro" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/pertamina.png" alt="client pertamina" class="img-fluid" />
+              <img src="assets/img-client/pertamina.png" alt="client pertamina" class="img-fluid" title="Pertamina" />
             </div>
           </div>
 
           <div class="row align-items-center justify-content-center mt-2">
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/logo-karang-anyar-kab.png" alt="client karanganyar kabupaten" class="img-fluid" />
+              <img src="assets/img-client/logo-karang-anyar-kab.png" alt="client karanganyar kabupaten" title="Kabupaten Karanganyar" class="img-fluid" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/pesona-indonesia.png" alt="client pesona indonesia" class="img-fluid" />
+              <img src="assets/img-client/pesona-indonesia.png" alt="client pesona indonesia" class="img-fluid" title="Pesona Indonesia" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/logo-boyolali-kab.png" alt="client boyolali kabupaten" class="img-fluid" />
+              <img src="assets/img-client/logo-boyolali-kab.png" alt="client boyolali kabupaten" class="img-fluid" title="Kabupaten Boyolali" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/logo-sucofindo.png" alt="client sucofindo" class="img-fluid" />
+              <img src="assets/img-client/logo-sucofindo.png" alt="client sucofindo" class="img-fluid" title="Sucofindo" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/speequal.jpg" alt="client speequal" class="img-fluid" />
+              <img src="assets/img-client/speequal.jpg" alt="client speequal" class="img-fluid" title="SpeeQual" />
             </div>
           </div>
           <div class="row align-items-center justify-content-center mt-2">
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/logo-klaten-kab.png" alt="client Klaten kabupaten" class="img-fluid" />
+              <img src="assets/img-client/logo-klaten-kab.png" alt="client Klaten kabupaten" class="img-fluid" title="Kabupaten Klaten" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/dinsos-jateng.png" alt="client Dinsos Jateng" class="img-fluid" />
+              <img src="assets/img-client/dinsos-jateng.png" alt="client Dinsos Jateng" class="img-fluid" title="Dinas Sosial Jawa Tengah" />
             </div>
             <div class="col-md-2 col-4 image-client">
-              <img src="assets/img-client/uin-jogja.png" alt="client UIN Jogja" class="img-fluid" />
+              <img src="assets/img-client/uin-jogja.png" alt="client UIN Jogja" class="img-fluid" title="UIN Jogja" />
             </div>
           </div>
         </div>
