Remove some script

--- a/mahafidz/hanya-bermodalkan-uang-saku-pengusaha-muda-jogja-ini-bangun-startup-yang-sukses.html
+++ b/mahafidz/hanya-bermodalkan-uang-saku-pengusaha-muda-jogja-ini-bangun-startup-yang-sukses.html
@@ -304,6 +304,7 @@
     </footer>
 
     <!-- Vanilla Javascript -->
+    <script src="assets/script/script.js"></script>
     <script>
       // Views Counter
       if (!localStorage.getItem("visits1")) {
