--- a/mahafidz/index.html
+++ b/mahafidz/index.html
@@ -104,7 +104,7 @@
               <p class="text-muted" style="display: inline; font-size: 17.1px"><span class="text sec-text">founder dan CEO PT Metafora Indonesia Teknologi (IDMETAFORA)</span></p>
               <br />
               <div class="d-flex align-items-center pt-5 justify-content-center">
-                <a class="btn btn-success py-2 px-2 me-5" href="https://bit.ly/3ys1iLn" bis_skin_checked="1"> <img src="assets/img/logo-whatsapp.png" style="width: 35px" />Whatsapp</a>
+                <a class="btn btn-success py-2 px-2 me-5" href="https://bit.ly/3ys1iLn" bis_skin_checked="1"> <img src="assets/img/logo-whatsapp.png" alt="WhatsApp" style="width: 35px" />Whatsapp</a>
                 <a href="#headerPopupHomeHero" id="headerVideoLinkHomeHero" target="_blank">
                   <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                     <span></span>
