--- a/mahafidz/profil.html
+++ b/mahafidz/profil.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/style/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="shortcut icon" href="assets/img/flavicon.ico" type="image/x-icon" />
-    <title>Profil MAHAFIDZ</title>
+    <title>Profil M Abdurrohman Alhafidz</title>
   </head>
   <body>
     <header>
