Add Google AdSense
Add Google AdSense

--- a/mahafidz/index.html
+++ b/mahafidz/index.html
@@ -13,6 +13,9 @@
       gtag("config", "G-XYL2V2NZVT");
     </script>
 
+    <!-- Google Ads -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6092608473153556" crossorigin="anonymous"></script>
+
     <!-- Meta Tag -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
